exports[`ErrorMessage component should render correctly with an error message 1`] = `
<div
  className="errorMessage">
  <i
    className="fa fa-exclamation-circle" />
  some string message
</div>
`;

exports[`ErrorMessage component should render the default message with no props 1`] = `
<div
  className="errorMessage">
  <i
    className="fa fa-exclamation-circle" />
  Something happened!
</div>
`;
